--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="12dp"
+    android:elevation="8dp">
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
@@ -9,4 +12,4 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:padding="8dp"/>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
